add scroll up bttn

--- a/src/nav.css
+++ b/src/nav.css
@@ -38,9 +38,12 @@
 
 .nav-container li:hover{
   background-color: #0065cc;
-  font-weight: 500;
 }
 
 .nav-container li:active{
+  background-color: #0065cc;
+}
+
+.active{
   background-color: #0065cc;
 }
