--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
-#home, #projects, #skills, #contact{
+#home, #skills, #contact{
   display: flex;
   align-items: center;
   justify-content: center;
   
-  height: 80vh;
+  height: 100vh;
 }
