--- a/src/css/home.css
+++ b/src/css/home.css
@@ -24,3 +24,15 @@
   height: 400px;
   border-radius: 50%;
 }
+
+@media only screen and (max-width: 600px) {
+
+  .home-wrapper{
+    flex-direction: column-reverse;
+    height: 60vh;
+  }
+
+  .home-wrapper img{
+    height: 200px;
+  }
+}
