--- a/src/css/home.css
+++ b/src/css/home.css
@@ -25,11 +25,18 @@
   border-radius: 50%;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 750px){
+  .home-wrapper img{
+    height: 250px;
+  }
+}
+
+@media only screen and (max-width: 670px) {
 
   .home-wrapper{
     flex-direction: column-reverse;
     height: 60vh;
+    text-align: center;
   }
 
   .home-wrapper img{
